# govproposal-ai

./: .env.example  .gitignore  README.md  deploy-railway.sh  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_identity_models.py  002_security_models.py  003_scoring_models.py  004_opportunities_proposals.py  005_org_capabilities_past_performance.py  006_add_opportunity_source.py  007_compliance_models.py  008_notification_models.py
backend/scripts/: seed.py
backend/src/govproposal/: __init__.py  config.py  main.py
backend/src/govproposal/ai/: service.py
backend/src/govproposal/analytics/: router.py  schemas.py  service.py
backend/src/govproposal/assistant/: router.py  service.py
backend/src/govproposal/compliance/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/govproposal/db/: __init__.py  base.py  redis.py
backend/src/govproposal/events/: __init__.py  bus.py  handlers.py  types.py
backend/src/govproposal/identity/: __init__.py  admin_router.py  auth_router.py  dependencies.py  exceptions.py  mfa_service.py  models.py  org_router.py  past_performance_router.py  permissions.py  platform_router.py  repository.py  schemas.py  security.py  service.py
backend/tests/: __init__.py
backend/tests/identity/: test_mfa_service.py  test_permissions.py
backend/tests/integration/: test_auth_flow.py  test_scoring_flow.py
backend/tests/scoring/: test_service.py
docs/: FEATURE_STATUS.docx  (+2 more)
(+94 files in other folders)
